# galactic-fall

./: .gitignore  .hgignore  Makefile  README  README.md  TODO  arx_reading.cpp  arx_reading.h  arx_resources.h  arxx_resources.h  border.cpp  buffer_reading.cpp  buffer_reading.h  button.cpp  button.h  callbacks.h  camera.cpp  camera.h  cargo.cpp  cargo.h  character.cpp  character.h  clicked_listener.cpp  clicked_listener.h  color.cpp  color.h  command_mind.cpp  command_mind.h  commodity.cpp  commodity.h  commodity_manager.cpp  commodity_manager.h  configure  destroy_listener.cpp  destroy_listener.h  doxygen  draw_text.cpp  draw_text.h  galactic-fall  galaxy.cpp  (+99 more)
libraries/arxx/: meson.build
libraries/arxx/include/arxx/: Archive.h  Arxx.h  Buffer.h  BufferReader.h  BufferWriter.h  Data.h  Item.h  Reference.h  Structure.h  archive.h  buffer.h  buffer_reader.h  buffer_writer.h  common.h  data.h  item.h  reference.h  structure.h
libraries/arxx/source/: Archive.cxx  ArchiveFile.h  Buffer.cxx  BufferReader.cxx  BufferWriter.cxx  Common.cxx  Data.cxx  Item.cxx  Reference.cxx  ReferenceImplementation.cxx  ReferenceImplementation.h  Relation.cxx  Structure.cxx  archive.cpp  archive_file.h  buffer.cpp  buffer_reader.cpp  buffer_writer.cpp  common.cpp  data.cpp  item.cpp  reference.cpp  reference_core.cpp  reference_core.h  reference_implementation.cpp  reference_implementation.h  relation.cpp  structure.cpp
libraries/events/: Makefile  Makefile.include  meson.build
libraries/events/include/: connection.h  event.h
libraries/events/include/events/: connection.h  event.h
libraries/events/source/: connection.cpp
libraries/events/test/: test.cpp
libraries/events/testing/: test_suite.cpp
libraries/graphics/: Makefile  Makefile.include  meson.build
libraries/graphics/include/: callback_node.h  camera.h  color_rgb.h  color_rgbo.h  default_render_target.h  drawing.h  engine.h  gl.h  light.h  mesh.h  mesh_manager.h  mesh_node.h  model.h  model_manager.h  node.h  orthogonal_2d_projection.h  particle_system.h  particle_system_node.h  perspective_projection.h  program.h  projection.h  render_context.h  render_target.h  scene.h  shader.h  shading_manager.h  style.h  texture.h  texture_manager.h  texture_render_target.h  view.h
libraries/graphics/include/graphics/: callback_node.h  camera.h  color_rgb.h  color_rgbo.h  default_render_target.h  drawing.h  engine.h  gl.h  light.h  mesh.h  mesh_manager.h  mesh_node.h  model.h  model_manager.h  node.h  orthogonal_2d_projection.h  particle_system.h  particle_system_node.h  program.h  scene.h  (+11 more)
libraries/graphics/source/: callback_node.cpp  camera.cpp  color_rgb.cpp  color_rgbo.cpp  debug.h  default_render_target.cpp  drawing.cpp  engine.cpp  gl.cpp  light.cpp  mesh.cpp  mesh_manager.cpp  mesh_node.cpp  model.cpp  model_manager.cpp  node.cpp  orthogonal_2d_projection.cpp  particle_system.cpp  particle_system_node.cpp  perspective_projection.cpp  program.cpp  projection.cpp  render_context.cpp  render_target.cpp  scene.cpp  shader.cpp  shading_manager.cpp  style.cpp  texture.cpp  texture_manager.cpp  texture_render_target.cpp  view.cpp
source/: Makefile  Makefile.dependencies  ammunition.cpp  ammunition.h  ammunition_class.cpp  ammunition_class.h  arx_reading.cpp  arx_reading.h  arx_resources.h  asset_class.cpp  asset_class.h  asset_class_manager.cpp  asset_class_manager.h  battery.cpp  battery.h  battery_class.cpp  battery_class.h  blueprint.cpp  blueprint.h  blueprint_manager.cpp  blueprint_manager.h  border.cpp  border.h  buffer_reading.cpp  buffer_reading.h  button.cpp  button.h  callbacks.h  camera.cpp  camera.h  cargo.cpp  cargo.h  character.cpp  character.h  character_observer.cpp  character_observer.h  class_manager.h  clicked_listener.cpp  clicked_listener.h  color.cpp  (+242 more)
source/callbacks/: Makefile  callbacks.h  callbacks.inc  connection_handle.h  connection_handle.inc  events.h  events.inc
source/callbacks/code-templates/: Bind.cgt  BindArgumentCore.cgt  Callback.cgt  CallbackCore.cgt  Counter.cgt  Event.cgt  FunctionCallback.cgt  FunctionCore.cgt  MethodCallback.cgt  MethodCore.cgt
source/graphics/: callback_node.cpp  callback_node.h  camera.cpp  camera.h  color_rgb.cpp  color_rgb.h  color_rgbo.cpp  color_rgbo.h  debug.h  default_render_target.cpp  default_render_target.h  drawing.cpp  drawing.h  engine.cpp  engine.h  gl.cpp  gl.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_manager.cpp  mesh_manager.h  mesh_node.cpp  mesh_node.h  model.cpp  model.h  model_manager.cpp  model_manager.h  model_node.cpp  model_node.h  model_object.cpp  model_object.h  node.cpp  node.h  orthogonal_2d_projection.cpp  orthogonal_2d_projection.h  particle_system.cpp  (+33 more)
source/math/: axis_angle.h  details.h  matrix3f.h  matrix4f.h  quaternion.h  vector2f.h  vector3f.h  vector4d.h  vector4f.h
source/physics/energy/: device.cpp  device.h  network.cpp  network.h
source/tools/code-generator/: CodeModel.py  Context.py  Functors.py  Template.py
source/ui/: border.cpp  border.h  button.cpp  button.h  dialog.cpp  dialog.h  dimension.cpp  dimension.h  dimension_operators.cpp  dimension_operators.h  event.cpp  event.h  hangar_widget.cpp  hangar_widget.h  heads_up_display.cpp  heads_up_display.h  image.cpp  image.h  key_event.cpp  key_event.h  label.cpp  label.h  list_box.cpp  list_box.h  list_box_item.cpp  list_box_item.h  list_box_object_item.cpp  list_box_object_item.h  list_box_scenario_item.cpp  list_box_scenario_item.h  list_box_text_item.cpp  list_box_text_item.h  load_game_dialog.cpp  load_game_dialog.h  load_scenario_dialog.cpp  load_scenario_dialog.h  load_ship_window.cpp  load_ship_window.h  main_menu_window.cpp  main_menu_window.h  (+52 more)
tools/littlem/: Makefile  littlem  meson.build
tools/littlem/documentation/: manual
tools/littlem/source/: Makefile  Makefile.dependencies  littlem.cpp  marker.h  object.cpp  object.h  opengl_extension.cpp  opengl_extension.h  point.cpp  point.h  position.cpp  position.h  triangle.cpp  triangle.h  triangle_point.cpp  triangle_point.h  xmlparser.cpp  xmlparser.h  xmlstream.cpp  xmlstream.h
(+440 files in other folders)
