littlem_executable = executable(
  'littlem',
  sources: [
    'source/littlem.cpp',
    'source/point.cpp',
    'source/triangle_point.cpp',
    'source/triangle.cpp'
  ],
  dependencies: [
    algebra_dependency,
    opengl_dependency,
    string_cast_dependency,
    x11_dependency,
    xml_parser_dependency,
    xml_stream_dependency
  ]
)
